<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:baselineAligned="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/profile_pic_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/full_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.666"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="186dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="44dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/bio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_image_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="195dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/about_me"
                    android:textAlignment="center"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_image_view"
                    app:layout_constraintTop_toBottomOf="@+id/full_name" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <TextView
                        android:id="@+id/media_head"
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:text="@string/media_head_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/follower_head"
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:text="@string/follower_head_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/following_head"
                        android:layout_width="38dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/following_head_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <TextView
                        android:id="@+id/media_text_view"
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/followers_text_view"
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/following_text_view"
                        android:layout_width="38dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>